plaatnotes: Some refactors and check user email uniqueness
